# SCON

./: .gitignore  CMakeLists.txt  LICENSE  README.md  amalgamate.py  gen_doxy.sh  run_bench.sh  run_tests.sh
.github/workflows/: release.yml  static.yml  test.yml
bench/: brainfuck.lua  brainfuck.rdt  brainfuck.scon  fib30.scon  fib35.lua  fib35.py  fib35.scon  fib65.janet  fib65.lua  fib65.py  fib65.scon  fizzbuzz.janet  fizzbuzz.lua  fizzbuzz.rdt  mandelbrot.lua  mandelbrot.rdt  mandelbrot.scon
include/reduct/: atom.h
reduct/: atom.h  atom_impl.h  bitmap.h  closure.h  closure_impl.h  compile.h  compile_impl.h  core.h  core_impl.h  defs.h  disasm.h  disasm_impl.h  error.h  error_impl.h  eval.h  eval_impl.h  function.h  function_impl.h  gc.h  gc_impl.h  handle.h  handle_impl.h  intrinsic.h  intrinsic_impl.h  item.h  item_impl.h  list.h  list_impl.h  native.h  native_impl.h  parse.h  parse_impl.h  standard.h  standard_impl.h  stringify.h  stringify_impl.h
scon/: atom.h  atom_impl.h  atom_internal.h  builtin.h  builtin_impl.h  char.h  char_impl.h  closure.h  closure_impl.h  compile.h  compile_impl.h  compile_internal.h  core.h  core_api.h  core_impl.h  core_internal.h  defs.h  disasm.h  disasm_impl.h  error.h  error_impl.h  eval.h  eval_impl.h  function.h  function_impl.h  gc.h  gc_api.h  gc_impl.h  gc_internal.h  handle.h  handle_impl.h  inst.h  intrinsic.h  intrinsic_impl.h  item.h  item_api.h  item_impl.h  item_internal.h  keyword.h  keyword_impl.h  (+31 more)
src/: atom.c  standard.c
tests/: 01_variables_scope.scon  02_control_flow_logic.scon  03_functions_higher_order.scon  04_sequences.rdt  04_sequences.scon  05_string_manipulation.scon  06_introspection.rdt  06_introspection.scon  07_type_casting.rdt  08_assoc.scon  08_system_environment.rdt  10_math_trigonometry.scon
tools/reduct-cli/: CMakeLists.txt  fuzz.c  reduct.c
tools/reduct-vscode/: language-configuration.json  package.json
tools/reduct-vscode/syntaxes/: reduct.tmLanguage.json
tools/scon/: CMakeLists.txt  scon.c  scon_version.h.in
tools/scon-vscode/: language-configuration.json
tools/scon-vscode/syntaxes/: scon.tmLanguage.json
